Sun May 13 16:54:01 BST 2001  Colin Watson  <cjwatson@debian.org>

	* man/Makefile.in: Exclude NLS directories without man pages, as CVS
	  can't delete directories quite as fully as I'd like.

	* configure.in: No subdirectory Makefiles need ALL_LINGUAS any more.

	* manual/Makefile: Make the location of soelim variable so that
	  distributions can e.g. use the version in the build directory.

	* manual/Makefile: Add an HTML target. Disabled by default as
	  groff's HTML driver doesn't produce very good output yet (as of
	  1.16).

	* include/Defines.in: Only remove /usr from the default sysconfdir
	  if the prefix is exactly /usr, not something that happens to
	  contain /usr (like the default /usr/local).

Sun May 13 13:39:17 BST 2001  Colin Watson  <cjwatson@debian.org>

	* man-db.gnu, man-db.lsm: Mention move to SourceForge and the new
	  URLs for the Debian package pool.

	* man-db.gnu: New architectures (successful Debian ports as of
	  today). New mailing list for announcements.

Sun May 13 13:18:56 BST 2001  Colin Watson  <cjwatson@debian.org>

	* README: Document FHS changes; correct pointer to
	  docs/INSTALL.autoconf.

	* docs/INSTALL.autoconf: Update to instructions from automake 1.4.

	* docs/COPYING: Minor fixes from GNU (FSF address, Y2K).

Sun May 13 13:00:17 BST 2001  Colin Watson  <cjwatson@debian.org>

	* GNUmakefile.in (dist): Add include/sections.list.

	* GNUmakefile.in, man/Makefile.in: Cause USE_NLS to be substituted
	  properly from configure.

	* include/Defines.in: Remove some old gencat definitions.

	* docs/NEWS: Update in preparation for 2.3.18 release. Correct a few
	  it's -> its typos in earlier entries.

Sun May 13 02:18:00 BST 2001  Colin Watson  <cjwatson@debian.org>

	* autogen.sh: Create stamp-h.in.

	* po/cs.po, po/de.po, po/es.po, po/fr.po, po/it.po, po/ja.po: Update
	  with msgmerge.

Sun May 13 02:03:05 BST 2001  Colin Watson  <cjwatson@debian.org>

	* docs/ToDo: Most of Wilf's beta code is in now; mention SuSE.
