@@ -169,7 +169,7 @@ _subdirs = $(EVERYTHING) tools docs include manual
 
 _all = */README */Makefile.in
 _root = ABOUT-NLS README configure *.h *.m4 *.in man-db.*
-_docs = INSTALL.* COPYING ChangeLog NEWS ToDo
+_docs = INSTALL.* COPYING ChangeLog NEWS ToDo manpage.example
 _include = *.in sections.list
 _lib = *.[ch]
 _libdb = *.[ch] stamp-h COPYING.LIB
